--- a/app/templates/components/bootstrap-page.hbs
+++ b/app/templates/components/bootstrap-page.hbs
@@ -1,8 +1,15 @@
 
+  <style>
+  .fakeimg {
+    height: 200px;
+    background: #aaa;
+  }
+  </style>
+
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Bootstrap Page</h1>
+  <h1>My First Bootstrap 4 Page</h1>
   <p>Resize this responsive page to see the effect!</p> 
 </div>
 
@@ -14,13 +21,13 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Profile</a>
+        <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Register</a>
+        <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">edit</a>
+        <a class="nav-link" href="#">Link</a>
       </li>    
     </ul>
   </div>  
@@ -72,3 +79,4 @@
 </div>
 
 </body>
+
