--- a/app/templates/components/new-ui.hbs
+++ b/app/templates/components/new-ui.hbs
@@ -1,7 +1,7 @@
 <div class="card">
       <div class="card-body">
             <div>
-                  <h1>Information</h1>
+                  <h1 class="ui-header">Information</h1>
                   <hr>
             </div>
 
@@ -10,7 +10,7 @@
       <div class="row">
             <div class="col-lg-6">
                   <div class="container">
-                        <h2>Table of HR contents</h2>
+                        <h2 class="ui-header">Table of HR contents</h2>
                         <hr>
                         <table class="table table-hover">
                               <thead>
@@ -123,8 +123,8 @@
                                     <div class="col-sm-2">
                                           <div class="row">
                                                 <div>
-                                                      <button type="button" class="btn btn-info">update</button>
-                                                      <button type="button" class="btn btn-secondary ">Save</button>
+                                                      <button type="button" class="ui-button">update</button>
+                                                      <button type="button" class="ui-button">Save</button>
                                                 </div>
 
                                           </div>
