--- a/app/templates/components/new-ui.hbs
+++ b/app/templates/components/new-ui.hbs
@@ -8,7 +8,7 @@
       </div>
 
       <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-7">
                   <div class="container">
                         <h2 class="ui-header">Table of HR contents</h2>
                         <hr>
@@ -36,10 +36,10 @@
                                           <th>{{info.name}}</th>
                                           <th>{{info.username}}</th>
                                           <th>{{info.email}}</th>
-                                          <th>{{info.address.suite}}<br>{{info.address.street}}<br>{{info.address.geo.lat}}</th>
+                                          <th>{{info.address.suite}}</th>
                                           <th>{{info.phone}}</th>
                                           <th>{{info.website}}</th>
-                                          <th>{{info.company.name}}<br>{{info.company.catchPhrase}}<br>{{info.company.bs}}</th>
+                                          <th>{{info.company.name}}</th>
                                     </tr>
                                     {{/each}}
                               </thead>
@@ -53,7 +53,7 @@
 
 
 
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                   <div class="container">
                         <h2>Registration Form</h2>
                         <hr>
@@ -108,12 +108,12 @@
                               </div>
 
                               <div class="row">
-                                    <div class="col-sm-10"></div>
-                                    <div class="col-sm-2">
+                                    <div class="col-sm-9"></div>
+                                    <div class="col-sm-3">
                                           <div class="row">
                                                 <div>
-                                                      <button type="button" class="ui-button">update</button>
-                                                      <button type="button" class="ui-button">Save</button>
+                                                      <button type="button" class="ui-button ui-button-2">update</button>
+                                                      <button type="button" class="ui-button ui-button-2">Save</button>
                                                 </div>
 
                                           </div>
